--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,43 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <title>Tailwindcss JIT</title>
 </head>
-<body>
-    <h1 class="font-bold text-blue-500 text-2xl">Tailwind CSS Starter Template</h1>
+<body class="antialiased text-gray-600">
+    <div class="absolute w-full min-h-screen">
+        <div
+            class="absolute top-0 w-full bg-bottom bg-cover h-1/2"
+            style="background-image: url('images/background.jpg');"
+        ></div>
+    </div>
+    <section class="flex items-center justify-center min-h-screen">
+        <div class="relative">
+            <div class="absolute inset-0 z-0 transform -skew-y-6 rounded-md shadow-md bg-gradient-to-r from-blue-400 to-red-300 sm:skew-y-0 sm:-rotate-6"
+            ></div>
+            <div class="relative z-10 max-w-4xl p-12 space-x-12 bg-white rounded-md shadow-md md:flex">
+                <div class="flex flex-col justify-between py-4 space-y-6">
+                    <div>
+                        <p class="text-lg">Hello, I am</p>
+                        <h1 class="text-5xl font-bold text-gray-800">Amit Das</h1>
+                    </div>
+                    <p class="text-xl leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        facere fugit omnis pariatur</p>
+                    <div class="inline-flex space-x-4 text-xl">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <ion-icon name="logo-twitter"></ion-icon>
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </div>
+                </div>
+                <img
+                        alt=""
+                        src="images/me.jpg"
+                        class="w-80 border-[6px] border-white rounded-full shadow-md flex-shrink-0"
+                >
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
