--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </div>
     <section class="flex items-center justify-center min-h-screen">
         <div class="relative">
-            <div class="absolute inset-0 z-0 transform -skew-y-6 rounded-md shadow-md bg-gradient-to-r from-blue-400 to-red-300 sm:skew-y-0 sm:-rotate-6"
+            <div class="bg-card"
             ></div>
             <div class="relative z-10 max-w-4xl p-12 space-x-12 bg-white rounded-md shadow-md md:flex">
                 <div class="flex flex-col justify-between py-4 space-y-6">
@@ -41,6 +41,45 @@
                         class="w-80 border-[6px] border-white rounded-full shadow-md flex-shrink-0"
                 >
             </div>
+        </div>
+    </section>
+
+    <section class="px-6 pt-20 pb-28 bg-gray-50">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center">
+                <h2 class="text-6xl font-bold text-gray-800">Services</h2>
+                <p class="p-2">Here's what I offer</p>
+            </div>
+        </div>
+        <div class="grid grid-cols-1 gap-16 mt-16 sm:grid-cols-2 lg:grid-cols-3">
+
+            <div class="relative">
+                <div class="bg-card"></div>
+                <div class="relative z-10 p-12 bg-white rounded-md shadow-md">
+                    <ion-icon name="phone-portrait-outline" class="text-5xl text-blue-500"></ion-icon>
+                    <h3 class="mt-3 text-2xl font-bold">Responsive Website</h3>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo porro dolores sint quaerat illum</p>
+                </div>
+            </div>
+
+            <div class="relative">
+                <div class="bg-card"></div>
+                <div class="relative z-10 p-12 bg-white rounded-md shadow-md">
+                    <ion-icon name="layers-outline" class="text-5xl text-blue-500"></ion-icon>
+                    <h3 class="mt-3 text-2xl font-bold">Responsive Website</h3>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo porro dolores sint quaerat illum</p>
+                </div>
+            </div>
+
+            <div class="relative">
+                <div class="bg-card"></div>
+                <div class="relative z-10 p-12 bg-white rounded-md shadow-md">
+                    <ion-icon name="chatbubbles-outline" class="text-5xl text-blue-500"></ion-icon>
+                    <h3 class="mt-3 text-2xl font-bold">Responsive Website</h3>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo porro dolores sint quaerat illum</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
