Feature: add word section

--- a/public/index.html
+++ b/public/index.html
@@ -83,5 +83,73 @@
         </div>
     </section>
 
+    <section class="px-6 pt-20 pb-28">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center">
+                <h2 class="text-6xl font-bold text-gray-800">Work</h2>
+                <p class="p-2">Some of my best works</p>
+            </div>
+        </div>
+        <div class="grid grid-cols-1 gap-16 mt-16 sm:grid-cols-2 lg:grid-cols-3">
+
+            <div class="col-span-2 rounded shadow-md">
+                <img src="images/work1.jpg" alt=""
+                    class="object-cover w-full h-80"
+                >
+                <div class="p-8">
+                    <h4 class="text-2xl font-bold">Work Title</h4>
+                    <p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptas?</p>
+                    <a
+                        href="#"
+                        class="btn"
+                    >View more</a>
+                </div>
+            </div>
+
+            <div class="rounded shadow-md">
+                <img src="images/work2.jpg" alt=""
+                    class="object-cover w-full h-80"
+                >
+                <div class="p-8">
+                    <h4 class="text-2xl font-bold">Work Title</h4>
+                    <p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptas?</p>
+                    <a
+                        href="#"
+                        class="btn"
+                    >View more</a>
+                </div>
+            </div>
+
+            <div class="rounded shadow-md">
+                <img src="images/work3.jpg" alt=""
+                    class="object-cover w-full h-80"
+                >
+                <div class="p-8">
+                    <h4 class="text-2xl font-bold">Work Title</h4>
+                    <p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptas?</p>
+                    <a
+                        href="#"
+                        class="btn"
+                    >View more</a>
+                </div>
+            </div>
+
+            <div class="col-span-2 rounded shadow-md">
+                <img src="images/work4.jpg" alt=""
+                    class="object-cover w-full h-80"
+                >
+                <div class="p-8">
+                    <h4 class="text-2xl font-bold">Work Title</h4>
+                    <p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptas?</p>
+                    <a
+                        href="#"
+                        class="btn"
+                    >View more</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
