--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <title>Tailwindcss JIT</title>
+    <title>Tailwindcss Portfolio</title>
 </head>
 <body class="antialiased text-gray-600">
     <div class="absolute w-full min-h-screen">
         <div
-            class="absolute top-0 w-full bg-bottom bg-cover h-1/2"
+            class="absolute z-0 top-0 w-full h-1/2 bg-cover bg-bottom pt-20 px-12 text-white text-center"
             style="background-image: url('images/background.jpg');"
         ></div>
     </div>
-    <section class="flex items-center justify-center min-h-screen">
-        <div class="relative">
+    <section class="relative z-10 flex min-h-screen h-auto justify-center items-center">
+        <div class="relative max-w-4xl">
             <div class="bg-card"
             ></div>
-            <div class="relative z-10 max-w-4xl p-12 space-x-12 bg-white rounded-md shadow-md md:flex">
-                <div class="flex flex-col justify-between py-4 space-y-6">
+            <div class="relative z-20 bg-white md:flex justify-between p-12 shadow-lg rounded-lg w-full max-w-4xl">
+                <div class="sm:flex flex-col justify-between space-y-6 py-6 md:pr-10">
                     <div>
                         <p class="text-lg">Hello, I am</p>
                         <h1 class="text-5xl font-bold text-gray-800">Amit Das</h1>
@@ -92,7 +92,7 @@
         </div>
         <div class="grid grid-cols-1 gap-16 mt-16 sm:grid-cols-2 lg:grid-cols-3">
 
-            <div class="col-span-2 rounded shadow-md">
+            <div class="md:col-span-2 rounded shadow-md">
                 <img src="images/work1.jpg" alt=""
                     class="object-cover w-full h-80"
                 >
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <div class="col-span-2 rounded shadow-md">
+            <div class="md:col-span-2 rounded shadow-md">
                 <img src="images/work4.jpg" alt=""
                     class="object-cover w-full h-80"
                 >
@@ -148,6 +148,47 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="flex items-center justify-center min-h-screen">
+        <div class="relative">
+            <div class="bg-card"
+            ></div>
+            <div class="relative z-10 max-w-4xl p-12 space-x-12 bg-white rounded-md shadow-md md:flex">
+                <div class="flex flex-col justify-between py-4 space-y-6">
+                    <div class="text-center">
+                        <h2 class="text-6xl font-bold text-gray-800">Contact</h2>
+                        <p class="p-2">Get in touch with me</p>
+                    </div>
+                    <div>
+                        <input
+                            type="text"
+                            name="name"
+                            placeholder="Name"
+                            class="p-2 mb-4 placeholder-gray-300 border rounded-md"
+                        >
+                        <input
+                            type="email"
+                            name="email"
+                            placeholder="Email"
+                            class="p-2 placeholder-gray-300 border rounded-md"
+                        >
+                    </div>
+                    <input
+                        type="text"
+                        name="subject"
+                        class="p-2 placeholder-gray-300 border rounded-md"
+                        placeholder="Subject"
+                    >
+                    <textarea
+                        type="textarea"
+                        class="p-2 placeholder-gray-300 border rounded-md resize-none"
+                        rows="4"
+                    ></textarea>
+                    <div><a href="#" class="btn">Send Message</a></div>
+                </div>
+            </div>
         </div>
     </section>
 
